2009-05-04  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Applied two patches from Laszlo Pere for NB#110527 and NB#106208.

	* matchbox/core/mb-wm-client-window.c (mb_wm_client_window_init): Call
	XSelectInput here instead of in matchbox/core/mb-wm-client-base.c
	(mb_wm_client_base_realize), except for override-redirect windows.
	* matchbox/client-types/mb-wm-client-app.c,
	matchbox/client-types/mb-wm-client-app.h,
	matchbox/client-types/mb-wm-client-dialog.h,
	matchbox/core/mb-wm-object.h: If parent MBWMClientApp is mapped after
	the child (in transiency sense), set the transiency in
	mb_wm_client_app_init.

2009-05-04  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#112601 An application from the background is topped when panning
		  or tapping on the right side of the touch screen

	* matchbox/core/mb-wm-client.c (mb_wm_client_init):
	  Don't set up a passive grab when a client is created...
	* matchbox/core/mb-window-manager.c (mb_wm_handle_button_press):
	  ...and don't handle all button press events.  It's thought
	  to be dead code and caused the problem because we reactivated
	  the clicked client in home view.

2009-04-30  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.36

2009-04-30  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Fix for missing textures after restarting the wm.

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_map_notify_real):
	  Fetch the texture unconditionally when the client is mapped.
	  Otherwise we fetch the texture on the first damage or when
	  the client changes fullscreenness, but in case of non-topmost
	  stackable windows neither of these may occurr, leaving the
	  texture unfetched.

2009-04-30  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-input.c
	(mb_wm_client_input_init): Check return value of
	mb_wm_managed_client_from_xwindow to shut up Coverity.
	* matchbox/theme-engines/mb-wm-theme.c (mb_wm_theme_new): Remove code